# call-cal-bot

./: Cargo.toml
.cargo/: config.toml
migrations/: V1__initial.sql  V2__add_password.sql
src/: api.rs  handler.rs  main.rs  service.rs
src/handler/: api.rs  qbot.rs
src/service/: daka.rs  models.rs  user.rs
web/: index.html
web/static/: app.js  style.css
