[package]
name = "call-cal-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
mania = { git = "https://github.com/LagrangeDev/mania.git", rev = "53e402fa910b33a09a556907b008af52db9b9718" }
thiserror = "2"
# reqwest = { version = "0.12", features = ["json", "native-tls-alpn"] }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.33", features = ["modern-full"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }

axum = "0.8"
